syntax = "proto3";
package identities.queries.identities;

import "gogoproto/gogo.proto";
import "x/identities/internal/mappable/mappable.proto";

message QueryResponse {
  option (gogoproto.goproto_getters) = false;
  repeated Mappable list = 1;
}